--- a/carInspectionManagment/carInspectionManagment/appsettings.json
+++ b/carInspectionManagment/carInspectionManagment/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyWebApiConection": "User ID =cars;Password=1234;Server=localhost;Port=5432;Database=CarInspectionManagement ;Integrated Security=true;Pooling=true;"
+  }
 }
