--- a/carInspectionManagment/carInspectionManagment/CarInspectionManagment.Api.csproj
+++ b/carInspectionManagment/carInspectionManagment/CarInspectionManagment.Api.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CarInspectionManagment.Business\CarInspectionManagment.Business.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
