masstransit and rabbitmq connection

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@
 /carInspectionManagment/CarInspectionManagment.Test/obj/Debug/net5.0
 /carInspectionManagment/CarInspectionManagment.Contract/obj
 /carInspectionManagment/CarInspectionManagment.Test/obj
+/carInspectionManagment/.vs/carInspectionManagment/FileContentIndex
+/carInspectionManagment/.vs/carInspectionManagment/DesignTimeBuild
+/carInspectionManagment/.vs/carInspectionManagment/v17
+/carInspectionManagment/ConnecterLayer/obj
+/carInspectionManagment/.vs/ProjectEvaluation
+/.vs/carInspectionManagment/FileContentIndex
+/.vs/carInspectionManagment/v17/.wsuo
