--- a/carInspectionManagment/CarInspectionManagment.Business/CarInspectionManagment.Business.csproj
+++ b/carInspectionManagment/CarInspectionManagment.Business/CarInspectionManagment.Business.csproj
@@ -34,7 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CarInspectionManagment.Contract\CarInspectionManagment.Contract.csproj" />
-    <ProjectReference Include="..\ConnecterLayer\ConnecterLayer.csproj" />
+    <!--<ProjectReference Include="..\ConnecterLayer\ConnecterLayer.csproj" />-->
   </ItemGroup>
 
 </Project>
