--- a/carInspectionManagment/ConnecterLayer/ConnecterLayer - Backup.csproj
+++ b/carInspectionManagment/ConnecterLayer/ConnecterLayer - Backup.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,10 +10,6 @@
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CarInspectionManagment.Business\CarInspectionManagment.Business.csproj" />
   </ItemGroup>
 
   <!--<ItemGroup>
