--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /carInspectionManagment/.vs/ProjectEvaluation
 /.vs/carInspectionManagment/FileContentIndex
 /.vs/carInspectionManagment/v17/.wsuo
+/carInspectionManagment
