--- a/carInspectionManagment/CarInspectionManagment.Business/CarInspectionManagment.Business.csproj
+++ b/carInspectionManagment/CarInspectionManagment.Business/CarInspectionManagment.Business.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+		<Protobuf Include="Protos\car.proto" GrpcServices="Server" />
 	</ItemGroup>
 
 	<ItemGroup>
